// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    classname="list-items "
  >
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "1",
          "state": "TASK_INBOX",
          "title": "Task 1",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "2",
          "state": "TASK_INBOX",
          "title": "Task 2",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "3",
          "state": "TASK_INBOX",
          "title": "Task 3",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "4",
          "state": "TASK_INBOX",
          "title": "Task 4",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "5",
          "state": "TASK_INBOX",
          "title": "Task 5",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "6",
          "state": "TASK_INBOX",
          "title": "Task 6",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots TaskList empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    empty
  </div>
</div>
`;

exports[`Storyshots TaskList loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    loading
  </div>
</div>
`;

exports[`Storyshots TaskList withPinnedTasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    classname="list-items "
  >
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "1",
          "state": "TASK_INBOX",
          "title": "Task 1",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "2",
          "state": "TASK_INBOX",
          "title": "Task 2",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "3",
          "state": "TASK_INBOX",
          "title": "Task 3",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "4",
          "state": "TASK_INBOX",
          "title": "Task 4",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "5",
          "state": "TASK_INBOX",
          "title": "Task 5",
          "updatedAt": 2018-01-01T14:00:00.000Z,
        }
      }
    />
    <task
      onArchiveTask={[Function]}
      onPinTask={[Function]}
      task={
        Object {
          "id": "6",
          "state": "TASK_PINNED",
          "title": "Task 6(pinned)",
        }
      }
    />
  </div>
</div>
`;
